# src/api/contracts/openapi.yaml
@@ -2571,6 +2571,9 @@ components:
         image:
           type: string
           nullable: true
+        backdrop:
+          type: string
+          nullable: true
         synopsis:
           type: string
           nullable: true
@@ -2621,6 +2624,7 @@ components:
             type: object
             additionalProperties: {}
       required:
+      - backdrop
       - cast
       - consumptions
       - consumptions_number
@@ -2667,6 +2671,9 @@ components:
         max_progress:
           type: integer
         image:
+          type: string
+          nullable: true
+        backdrop:
           type: string
           nullable: true
         synopsis:
@@ -2720,6 +2727,7 @@ components:
             type: object
             additionalProperties: {}
       required:
+      - backdrop
       - cast
       - consumptions
       - consumptions_number
